@@ -15,6 +15,7 @@ import java.util.ArrayList;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -54,6 +55,13 @@ public class AIService {
     
     private void initializeStorage() {
         try {
+            // 루트 스토리지 디렉토리 생성
+            Path rootDir = Paths.get(storagePath);
+            if (!Files.exists(rootDir)) {
+                Files.createDirectories(rootDir);
+                System.out.println("[AIService] 루트 스토리지 디렉토리 생성: " + rootDir.toAbsolutePath());
+            }
+            
             // PDF 저장소 디렉토리 생성
             Path pdfDir = Paths.get(storagePath, "pdfs");
             if (!Files.exists(pdfDir)) {
@@ -67,6 +75,13 @@ public class AIService {
                 Files.createDirectories(webDir);
                 System.out.println("[AIService] 웹 컨텐츠 디렉토리 생성: " + webDir.toAbsolutePath());
             }
+            
+            // 디렉토리 권한 확인 (디버그용)
+            System.out.println("[AIService] 스토리지 경로: " + rootDir.toAbsolutePath());
+            System.out.println("[AIService] 스토리지 디렉토리 존재 여부: " + Files.exists(rootDir));
+            System.out.println("[AIService] 스토리지 디렉토리 쓰기 권한: " + Files.isWritable(rootDir));
+            System.out.println("[AIService] 웹 디렉토리 존재 여부: " + Files.exists(webDir));
+            System.out.println("[AIService] 웹 디렉토리 쓰기 권한: " + Files.isWritable(webDir));
         } catch (IOException e) {
             System.err.println("[AIService] 스토리지 디렉토리 생성 실패: " + e.getMessage());
             e.printStackTrace();
@@ -142,7 +157,7 @@ public class AIService {
      */
     public String categorizeContent(String content) {
         System.out.println("[AIService] 카테고리 분류 시작");
-        String prompt = "다음 책 내용의 장르를 분류해주세요. 소설, 시, 에세이, 자기계발, 역사, 과학, 경제, 철학 중 하나로 답변해주세요: " 
+        String prompt = "다음 책 내용의 장르를 분류해주세요. 소설, 시, 에세이, 자기계발, 역사, 과학, 경제, 철학 중 하나만 골라 정확히 한 단어로만 답변해주세요. 다른 설명은 하지 말고 카테고리 단어만 답변해주세요: " 
             + content.substring(0, Math.min(1000, content.length()));
         
         Map<String, Object> requestBody = createChatCompletionRequest(prompt);
@@ -154,7 +169,40 @@ public class AIService {
             List<Map<String, Object>> choices = (List<Map<String, Object>>) responseMap.get("choices");
             Map<String, Object> message = (Map<String, Object>) choices.get(0).get("message");
             String result = (String) message.get("content");
+            
+            // 결과를 정리: 단일 단어만 추출
+            result = result.trim();
+            // 특수문자, 마침표 등 제거
+            result = result.replaceAll("[,.\"':]", "");
+            // 여러 줄이면 첫 줄만 사용
+            if (result.contains("\n")) {
+                result = result.substring(0, result.indexOf("\n"));
+            }
+            // 여러 단어라면 첫 단어만 사용
+            if (result.contains(" ")) {
+                result = result.substring(0, result.indexOf(" "));
+            }
+            
             System.out.println("[AIService] 분류된 카테고리: " + result);
+            
+            // 허용된 카테고리 목록과 비교하여 정확한 카테고리만 반환
+            String[] validCategories = {"소설", "시", "에세이", "자기계발", "역사", "과학", "경제", "철학"};
+            boolean isValid = false;
+            
+            for (String category : validCategories) {
+                if (result.equalsIgnoreCase(category)) {
+                    result = category; // 정확한 형식으로 변환
+                    isValid = true;
+                    break;
+                }
+            }
+            
+            // 유효하지 않은 카테고리일 경우 기본값 반환
+            if (!isValid) {
+                System.out.println("[AIService] 유효하지 않은 카테고리, 기본값으로 '소설' 설정");
+                result = "소설";
+            }
+            
             return result;
         } catch (Exception e) {
             System.err.println("[AIService] AI 응답 처리 중 오류 발생: " + e.getMessage());
@@ -200,8 +248,16 @@ public class AIService {
             // 고유 ID 생성
             String uniqueId = String.valueOf(System.currentTimeMillis());
             
-            // HTML 파일 생성
-            Path htmlFilePath = Paths.get(storagePath, "web", uniqueId + ".html");
+            // HTML 파일 저장 경로
+            Path webDir = Paths.get(storagePath, "web");
+            
+            // 웹 디렉토리가 없으면 다시 생성 시도
+            if (!Files.exists(webDir)) {
+                Files.createDirectories(webDir);
+                System.out.println("[AIService] 웹 디렉토리 다시 생성: " + webDir.toAbsolutePath());
+            }
+            
+            Path htmlFilePath = webDir.resolve(uniqueId + ".html");
             
             // 간단한 HTML 템플릿 생성
             String htmlContent = "<!DOCTYPE html>\n"
@@ -221,16 +277,17 @@ public class AIService {
                     + "</body>\n"
                     + "</html>";
             
+            // HTML 파일 저장 전 경로 확인
+            System.out.println("[AIService] HTML 파일 저장 경로: " + htmlFilePath.toAbsolutePath());
+            System.out.println("[AIService] 상위 디렉토리 존재 여부: " + Files.exists(htmlFilePath.getParent()));
+            
             // HTML 파일 저장
-            Files.write(htmlFilePath, htmlContent.getBytes());
-            System.out.println("[AIService] HTML 파일 생성: " + htmlFilePath.toAbsolutePath());
+            Files.writeString(htmlFilePath, htmlContent, StandardCharsets.UTF_8);
+            System.out.println("[AIService] HTML 파일 생성 완료: " + htmlFilePath.toAbsolutePath());
             
             // URL 생성 (실제 환경에서는 웹 서버 설정에 맞게 조정 필요)
             String url = baseUrl + "/books/" + uniqueId;
             System.out.println("[AIService] 생성된 웹 URL: " + url);
-            
-            // 실제 파일 경로 출력 (디버깅용)
-            System.out.println("[AIService] 실제 파일 경로: " + htmlFilePath.toAbsolutePath());
             
             return url;
         } catch (IOException e) {
@@ -254,20 +311,26 @@ public class AIService {
             // 고유 ID 생성
             String uniqueId = String.valueOf(System.currentTimeMillis());
             
-            // 간단한 텍스트 파일로 대체 (실제 구현에서는 PDF 라이브러리 사용 필요)
+            // PDF 디렉토리 확인 및 생성
             Path pdfDir = Paths.get(storagePath, "pdfs");
             if (!Files.exists(pdfDir)) {
                 Files.createDirectories(pdfDir);
+                System.out.println("[AIService] PDF 디렉토리 다시 생성: " + pdfDir.toAbsolutePath());
             }
             
-            Path textFilePath = Paths.get(pdfDir.toString(), uniqueId + ".txt");
+            Path textFilePath = pdfDir.resolve(uniqueId + ".txt");
             
             // 텍스트 파일에 내용 작성
             String fileContent = "이미지 URL: " + imageUrl + "\n\n"
                     + "요약:\n" + summary + "\n\n"
                     + "내용:\n" + content;
             
-            Files.write(textFilePath, fileContent.getBytes());
+            // 파일 저장 전 경로 확인
+            System.out.println("[AIService] 텍스트 파일 저장 경로: " + textFilePath.toAbsolutePath());
+            System.out.println("[AIService] 상위 디렉토리 존재 여부: " + Files.exists(textFilePath.getParent()));
+            
+            Files.writeString(textFilePath, fileContent, StandardCharsets.UTF_8);
+            System.out.println("[AIService] 텍스트 파일 생성 완료: " + textFilePath.toAbsolutePath());
             
             String pdfPath = textFilePath.toAbsolutePath().toString();
             System.out.println("[AIService] 생성된 PDF 경로: " + pdfPath);
